# NemoClawd

./: .dockerignore  .npmignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  system-of-record.json  tsconfig.json
apps/NeMo-Agent-Toolkit-develop/: .coderabbit.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  README.md  _build_log.txt  conftest.py  pyproject.toml
apps/NeMo-Agent-Toolkit-develop/.cursor/rules/: general.mdc
apps/NeMo-Agent-Toolkit-develop/.github/workflows/: ci_pipe.yml
apps/NeMo-Agent-Toolkit-develop/examples/: README.md
apps/NeMo-Agent-Toolkit-develop/scripts/: langchain_web_ingest.py  web_utils.py
apps/NeMo-Agent-Toolkit-develop/test_data/: docker-compose.services.yml
apps/clawdbot-main/: package.json
artifacts/: adam-identity-search.txt  adam-post-edit-check.txt  agent-help.txt  canvas-script.js  delete-clawdbot-log.txt  dev-config-scan.txt  gateway-status.txt  identity-check.json  interface-check.txt  launch.pid  manifest.json  models-list.json  process-status.txt  runtime-check.txt  runtime-name-search.txt  system-of-record.status.json  truth-policy-check.json
nemoclawd-icons/: nemoclawd-logo.icns  winappicon.rc
python_src/nemoclawd_bridge/: __main__.py
python_src/nemoclawd_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: bootstrap-python.mjs  build-node.mjs  build-python.mjs  collect-artifacts.mjs  run-clawdbot-with-nemo.mjs  smoke-test.mjs  verify-system-of-record.mjs
src/: index.ts  nemo-bridge.ts
workflows/: nemo-sample.workflow.yml
(+220 files in other folders)
